# brainfuck_haskell_v2

./: README.md  hbrainfuck.cabal
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.14/8.0.2/flag-cache/: hbrainfuck-0.1.0.0-B95AI9zbtcOI3nw9DpqeuW  hbrainfuck-0.1.0.0-CyDHpvlfwgI2wOdVHCZA1I
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.14/8.0.2/lib/x86_64-linux-ghc-8.0.2/hbrainfuck-0.1.0.0-B95AI9zbtcOI3nw9DpqeuW/: Optimizer.hi  Parser.hi
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.14/8.0.2/lib/x86_64-linux-ghc-8.0.2/hbrainfuck-0.1.0.0-CyDHpvlfwgI2wOdVHCZA1I/: Lib.dyn_hi  Lib.hi  Optimizer.dyn_hi  Optimizer.hi  Parser.dyn_hi  Parser.hi
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.14/8.0.2/pkgdb/: hbrainfuck-0.1.0.0-B95AI9zbtcOI3nw9DpqeuW.conf  package.cache
app/: Main.hs
src/: Optimizer.hs  Parser.hs
