name:                hbrainfuck
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/hbrainfuck#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/hbrainfuck#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Parser, Optimizer
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
  default-language:    Haskell2010

executable hbrainfuck-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hbrainfuck
                     , protolude
                     , directory
  default-language:    Haskell2010

test-suite hbrainfuck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hbrainfuck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hbrainfuck
